[UTE_HUB - 158]: Fix get document recommend
